fixed: ball animation on mobiles

--- a/css/header.css
+++ b/css/header.css
@@ -185,8 +185,25 @@ a, button {
 @media (max-width: 600px) {
   
   .ball {
-    animation-name: none;
+    animation-name: ball;
+    animation-duration: 3s;
+    animation-timing-function: ease-in;
+    animation-delay: 1s;
   }
+  
+  @keyframes ball {
+    0% {
+      background: linear-gradient(
+        320deg,
+        rgba(247, 116, 166, 1) 14%,
+        rgba(248, 150, 178, 1) 29%,
+        rgba(250, 246, 211, 1) 52%,
+        rgba(125, 199, 223, 1) 76%,
+        rgba(74, 179, 228, 1) 100%,
+      );
+      margin: auto;
+      transform: rotateZ(600deg);
+    }
 
  
 
